Version ?
* Feature: Use consistent naming: PCManX
* Feature: Allow users to search selected text through Web search engine
* Feature: Handle malformed URL properly
* Feature: Usability enhancement for Unity desktop envionment
* Feature: Add new interface to show and hide toolbar
* Bugfix:  SegFault when $LANG is not set
* Bugfix:  Replace system() with execlp() for sake of security
* Bugfix:  Use g_spawn_async() instead of fork()/execlp() to prevent crash
* Bugfix:  Build failure when configured as --disable-docklet
* Bugfix:  Status bar appears in simple mode
* Bugfix:  FcFontSort() should no longer use `NULL' as the value of `result'
* Bugfix:  Change "class" and "name" hints for a window.
* Bugfix:  Add "StartupNotify=true"
* Bugfix:  Fix the invisible cursor issue


Version 1.1 - January 2012

* Feature: Complete UAO support for copy/paste/input/download.
* Feature: Add fontconfig fallback font support.
* Feature: New icon design.
* Feature: Improve Unity libappindicator integration.
* Feature: Update RPM spec file for Fedora 16 and openSUSE 12.1
* Feature: Switch source code management to Git.
* Feature: Switch release tarball to xz compression format.
* Bugfix: Program name doesn't show on notificaiton bar of GNOME Shell
* Bugfix: The notificaition lack of program name in GNOME Shell
* Bugfix: Weird display name and tooltip covered under notification area in GNOME Shell
* Bugfix: Remove forkpty for OpenSolaris because of license incompatible issue.
* Bugfix: Supporting GNOME3 Startup Notification.


Version 1.0 - April 2011

* Feature: Support IPv6 connection.
* Feature: Change default font family to 'WenQuanYi Micro Hei Mono'.
* Feature: Remove deprecated Mozilla/Firefox plugin.
* Bugfix: Fix libnotify 0.7.0 API compatibility.
* Bugfix: Fix compilation error of CStie.
* Bugfix: Fix ASCII art painting issue.


Version 0.3.9 - August 2009

* Feature: Middle mouse click as tab close (similar behavior under Firefox).