@@ -111,6 +111,7 @@ public:
 //	Display Settings
 	bool AntiAliasFont;
 	bool CompactLayout;
+        bool Maximized;
 	int CharPaddingX;
 	int CharPaddingY;
 	bool HorizontalCenterAlign;
