@@ -82,6 +82,7 @@ public:
 //	CTelnetView* LookupView(GtkWidget* view){	return (CTelnetView*) g_hash_table_lookup(m_TelnetViewHash, view);	}
 	static gboolean OnBlinkTimer(CMainFrame* _this);
 	static gboolean OnEverySecondTimer(CMainFrame* _this);
+	static gboolean OnWindowStateEvent(GtkWindow* window, GdkEventWindowState* event, CMainFrame* _this);
 	static gboolean OnClose( GtkWidget* widget, GdkEvent* evt, CMainFrame* _this );
 	static gboolean OnSize( GtkWidget* widget, GdkEventConfigure* evt, CMainFrame* _this );
 	GObject* m_JumpTos[10];
